--- a/Image_Compressor.ipynb
+++ b/Image_Compressor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,6 +168,159 @@
     "    centroids = X[randidx[:K]]\n",
     "    \n",
     "    return centroids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "original_img = plt.imread('Profi.jpg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of original_img is: (1368, 1452, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Shape of original_img is:\", original_img.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Divide by 255 so that all values are in the range 0 - 1 (not needed for PNG files)\n",
+    "original_img = original_img / 255\n",
+    "\n",
+    "# Reshape the image into an m x 3 matrix where m = number of pixels\n",
+    "# (in this case m = 128 x 128 = 16384)\n",
+    "# Each row will contain the Red, Green and Blue pixel values\n",
+    "# This gives us our dataset matrix X_img that we will use K-Means on.\n",
+    "\n",
+    "X_img = np.reshape(original_img, (original_img.shape[0] * original_img.shape[1], 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "K-Means iteration 0/9\n",
+      "K-Means iteration 1/9\n",
+      "K-Means iteration 2/9\n",
+      "K-Means iteration 3/9\n",
+      "K-Means iteration 4/9\n",
+      "K-Means iteration 5/9\n",
+      "K-Means iteration 6/9\n",
+      "K-Means iteration 7/9\n",
+      "K-Means iteration 8/9\n",
+      "K-Means iteration 9/9\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 800x600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Run your K-Means algorithm on this data\n",
+    "K = 16\n",
+    "max_iters = 10\n",
+    "\n",
+    "# Using the function you have implemented above. \n",
+    "initial_centroids = kMeans_init_centroids(X_img, K)\n",
+    "\n",
+    "# Run K-Means - this can take a couple of minutes depending on K and max_iters\n",
+    "centroids, idx = run_kMeans(X_img, initial_centroids, max_iters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Shape of idx:\", idx.shape)\n",
+    "print(\"Closest centroid for the first five elements:\", idx[:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot the colors of the image and mark the centroids\n",
+    "plot_kMeans_RGB(X_img, centroids, idx, K)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualize the 16 colors selected\n",
+    "show_centroid_colors(centroids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Find closest centroid of each pixel\n",
+    "idx = find_closest_centroids(X_img, centroids)  \n",
+    "\n",
+    "#Replace each pixel with the color of the closest centroid\n",
+    "X_recovered = centroids[idx, :]\n",
+    "\n",
+    "#Reshape image into proper dimensions\n",
+    "X_recovered = np.reshape(X_recovered, original_img.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Display original image\n",
+    "fig, ax = plt.subplots(1,2, figsize=(16,16))\n",
+    "plt.axis('off')\n",
+    "\n",
+    "ax[0].imshow(original_img)\n",
+    "ax[0].set_title('Original')\n",
+    "ax[0].set_axis_off()\n",
+    "\n",
+    "\n",
+    "# Display compressed image\n",
+    "ax[1].imshow(X_recovered)\n",
+    "ax[1].set_title('Compressed with %d colours'%K)\n",
+    "ax[1].set_axis_off()"
    ]
   }
  ],
